--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@Layer components{
+    .bannerIcon{
+        @apply w-16 h-16 bg-black bg-opacity-25 text-gray-200 text-xl inline-flex items-center justify-center rounded-md shadow-shadowOne hover:bg-opacity-40  hover:text-designColor cursor-pointer duration-300;
+    }
+}
+
+.active{
+    color: #ffffff;
+}
